# jupiter-os

./: .gitignore  .sops.yaml  ARCHITECTURE.md  CLAUDE.md  Makefile  NIX_AUDIT_REPORT.md  README.md  STRATEGY.md  flake.nix  shell.nix
.claude/tdd/: robcoterm.tdd.md
.github/workflows/: ci.yml  flake-update.yml
apps/robcoterm/: Cargo.toml  build.rs
apps/robcoterm/src/: dispatch.rs  display.rs  ha.rs  input.rs  lib.rs  main.rs  state.rs  theme.rs
apps/robcoterm/ui/: enviro.slint  lights.slint  main.slint  pages.slint  pay.slint  quarters.slint  roster.slint  stats.slint  theme.slint
apps/robcoterm/ui/components/: meter.slint  nav_bar.slint  overview_cell.slint  status_bar.slint  vault_boy.slint
docs/: 01-architecture.md  02-hosts.md  03-software-inventory.md  04-modules-reference.md  05-networking.md  06-storage-and-backups.md  07-secrets-management.md  08-edge-devices.md  09-operations.md  10-terraform.md  README.md  callisto-iscsi-root-provisioning.md  europa-bringup-stages.md  europa-stage4-progress.md  module-options.md  roadmap.md
docs/plans/: 2026-07-13-001-feat-europa-phase2-tuned-closure-plan.md
hosts/adrastea/: configuration.nix
hosts/amalthea/: configuration.nix
hosts/callisto/: configuration.nix
hosts/carme/: configuration.nix
hosts/dashboards/: configuration.nix  disko.nix
hosts/desktop/: configuration.nix
hosts/elara/: configuration.nix
hosts/elitedesk/: configuration.nix
hosts/europa/: configuration.nix  disko.nix
hosts/ganymede/: configuration.nix
hosts/himalia/: configuration.nix
hosts/lenovo/: configuration.nix  disko.nix
hosts/metis/: configuration.nix
hosts/nas/: configuration.nix  disko.nix
hosts/pallene/: configuration.nix
hosts/parents-desktop/: configuration.nix
hosts/t460s/: configuration.nix
hosts/thebe/: configuration.nix
lib/: module-options.nix  site.nix
modules/: backups.nix  branding.nix  cloudflared.nix  common-stateful.nix  common.nix  headscale.nix  home-assistant-vm.nix  n8n.nix  pxe-server.nix  zfs-nas.nix
modules/boot/: fallout-splash.nix
modules/core/: antigravity-cli.nix  attic-substituter.nix  branding.nix  build-machines.nix  build-tuning.nix  ecc.nix  impermanence.nix  scheduler.nix  zed.nix
modules/desktop/: dashboard-gaming.nix  dashboard-kiosk.nix  default.nix  niri.nix  robcoterm-kiosk.nix  tcxwave-kiosk.nix
modules/gaming/: bazzite.nix  console.nix
scratchpad/: dump_dom.py  ha_autologin.py  thebe-installer-iso.nix
scripts/: amt.py  binarylane-build-server.sh  boot-smoke.sh  gen-secrets.sh  tcxwave-touch-wake.py  upload-pallene-iso-r2.sh
secrets/: secrets.yaml  syncoid_ed25519.pub
(+50 files in other folders)
