[package]
name = "robcoterm"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Native Rust + Slint RobCo/Vault-Tec kiosk for the TCx Wave dashboard panels"

# Slint feature set per implementation_plan.md §2. default-features = false
# drops backend-default + system-tray (unwanted on a kiosk); we explicitly
# re-add the mandatory bits + the linuxkms-noseat DRM backend, the femtovg
# EGL renderer, and libinput multitouch access for the Atmel panel.
[dependencies]
slint = { version = "~1.17", default-features = false, features = [
    "compat-1-2",
    "std",
    "backend-linuxkms-noseat",
    "renderer-femtovg",
    "unstable-libinput-09",
    "accessibility",
] }
# Phase 2 — HA WebSocket layer. tokio drives the worker thread (single
# multi-thread runtime per implementation_plan.md §1); tokio-tungstenite does
# the wss:// transport with a rustls backend (no openssl closure bloat).
# serde/serde_json for HA message framing, futures-util for stream splitting,
# thiserror for typed errors, url for endpoint parsing.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time", "io-util", "fs"] }
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
thiserror = "2"

[features]
# Enables the mock DRM backend so display::tests runs without a real DRM fd.
drm-mock = []

[dev-dependencies]
# Mock WS server in tests is just tokio-tungstenite::accept_async on a
# TcpListener bound to 127.0.0.1:0 (per task.md T2.1 verify). No extra crate.

[build-dependencies]
slint-build = "~1.17"

[profile.release]
lto = true
strip = true
